--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ body, html {
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
     <p>Find us at some address at some place.</p>
     <img src="https://www.w3schools.com/w3images/coffeehouse2.jpg" style="width:100%">
-    <p><span class="w3-tag">FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
+    <p><span class="w3-tag">thecaffe!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
     <p></p>
     
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2Y7mdlebRdPYXbfb8KCLsIbq0VFMu_Gu-BQieMRBSq7fjbA/viewform?embedded=true" width="100%" height="1012hv" frameborder="0">Loading…</iframe>
